fix: corrects bug of spacing in google chrome

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2475,10 +2475,10 @@ body {
 
   .person-background {
     width: 100%;
-    min-height: 80vh;
+    min-height: unset;
     height: auto;
     margin: 0;
-    padding: 0;
+    padding: 40px 0 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -2494,7 +2494,7 @@ body {
     justify-content: center;
     align-items: center;
     transform: none;
-    margin-top: -25px;
+    margin-top: 10px;
   }
 
   .profile-photo {
